# magnit-api

./: README.md  magnit_parser.py  pyproject.toml  requirements.txt
output/: magnit_products_moscow.xlsx  magnit_products_spb.xlsx
src/magnit-pure-api/: main.py
src/magnit_pure_api.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/pyatorochka-min-api-zavorateam/: main.py
src/pyatorochka_min_api.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/pyatorochka_min_api_zavorateam.egg-info/: PKG-INFO  SOURCES.txt
