[build-system]
requires = ["setuptools >= 77.0.3", "requests", "pandas", "urllib3", "bs4", "json", "re", "urllib"]
build-backend = "setuptools.build_meta"
[project]
name = "magnit-pure-api"
version = "0.4.1"
authors = [
  { name="Zavorateam", email="renovvrhelp@gmail.com" }, { name="arzek6" },
]
description = "Minimal Python Api for shop Magnit"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/zavorateam/magnit-api"
Issues = "https://github.com/zavorateam/magnit-api/issues"
COAuthor = "https://github.com/arzek6/magnit-api-parser"
COGithub = "https://github.com/arzek6/magnit-api-parser/issues"